--- a/index.html
+++ b/index.html
@@ -1,88 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="design.css">
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Web-Travel</title>
-
+  <title>W3.CSS Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-	<div class="container">
-		<table class="Webpage-top">
-			<tr>
-				<th style="padding-left: 30px;padding-right: 10px; width: 9%">
-					<a style="text-decoration: none;" href="#brand">BRAND</a>
-				</th>
-				<th style="width:9%; text-align: right; ">
-					<a style="text-decoration: none;" href="#brand">BROWSE</a>
-				</th>
-				<th style="width: 50%">
-					
-				</th>
-				<th style="width:9%; padding-right: 10px">
-					<a style="text-decoration: none;" href="#brand">SIGN UP</a>
-				</th>
-				<th style="padding-right: -10px; width: 9%">
-					<a style="text-decoration: none;" href="#brand">LOG IN</a>
-				</th>
-				<th style="padding-right: 10px; width: 9%">
-					<a style="text-decoration: none;" href="#brand">HELP</a>
-				</th>
-			</tr>
-		</table>
-
-		<div id = big-area>
-			<img src="img/lodging.png">
-			<div class="contentt"> 
-				<h1>Find a place to stay.</h1>
-				<p style="font-size: 25px">Rest from people in over 34.000 cities and 192 coutries</p>
-			</div>
-			<div class="web-body">
-				<h1>Neighborhood Guides</h1>
-				<p>Not sure where to stay? We've created neighborhood guides for cities all around the world</p>
-				<table class="image-area">
-					<tr>
-						<th class="edit"><img style="width: 400px" src="img/mexico-city.png"></th>
-						<th><img style="width: 400px" src="img/tokyo.png"></th class="edit">
-						<th class="edit" rowspan="2"><img style="height: 380px" src="img/invite.png"></th>
-					</tr>
-					<tr>
-						<th class="edit"><img style="width: 400px" src="img/ny.png"></th>
-						<th class="edit"><img style="width: 400px" src="img/paris.png"></th>
-					</tr>
-				</table>
-				<table class="footer">
-					<tr class="text-in-footer">
-						<th><h1 class="inside">Travel</h1></th>
-						<th><h1 class="inside">Host</h1></th>
-						<th><h1 style="width: 130%" class="inside">Trust and Safety</h1></th>
-					</tr>
-					<tr class="text-in-footer">
-						<th><p class="inside">From apartments and rooms to treehouse and boats: stay in unique spaces in 192 countries</p></th>
-						<th><p class="inside">Renting out your unused space could pay your bills or fund your next vacation.</p>
-						</th>
-						<th><p class="inside">From vertified ID to our worldwide customer support team, we've got your back.</p>
-						</th>
-					</tr>
-					<tr class="text-in-footer">
-						<th><a class="inside1" href=""><p class="inside1">See how to travel on Airbnb</p></a></th>
-						<th> <a class="inside1" href=""> <p class="inside1" >Learn more about hosting</p></a></th>
-						<th> <a class="inside1" href=""> <p class="inside1" >Learn more about trust at Airbnb</p></a></th>
-					</tr>
-				</table>
-			</div>
-		</div>	
-				
-	
-		
-
-		
-	</div>
-	
-
-	
-</body>
+  <body>
+    <div>
+      <ul>
+        <li class="style3"><a href="#BRAND" >BRAND</a></li>
+        <li><a href="#BROWSE" >BROWSE</a></li>
+        <li class="style2 style4"><a href="#SIGN UP" >SIGN UP</a></li>
+        <li class="style2"><a href="#LOG IN"  >LOG IN</a></li>
+        <li class="style2"><a href="#HELP" >HELP</a></li>
+      </ul>
+    </div>
+    <div class="center">
+      <div>
+        <img class="image" src="image/lodging.png" style="margin: 0">
+        <div class="text-block">
+          <p class="p1"><b>Find a place to stay</b></p>
+          <p class="p2">Rent from people in over 34,000 cities and 192 contries.</p>
+        </div>
+    </div>
+        <p class="text1"><b>Neigborhood Guides</b></p>
+        <p class="text2">Not sure where to stay? We'have created neighborhood guides for cities all around the world</p>
+    <div style="margin: 0;">
+      <div class="column">
+        <img src="image/mexico-city.png" class="marginbt imgtype1">
+        <img src="image/ny.png" class="marginbt imgtype2">  
+      </div>
+      <div class="column">
+        <img src="image/tokyo.png" class="marginbt imgtype3">
+        <img src="image/paris.png" class="marginbt imgtype2">
+      </div>
+      <div class="column">
+        <img src="image/invite.png" class="marginbt imgtype4"><br>
+      </div>
+    </div>
+    </div>
+    <div class ="footer"> 
+      <div class="columnfood" >
+        <h1><b>Travel</b></h1>
+        <p class="style1">From apartments and rooms to treehouses and boats; stay in unique spaces in 192 countries</p>
+        <a href="#travel" class="text-none"> See how to travel on Airbnb</a>
+      </div>
+      <div class="columnfood" >
+        <h1><b>Host</b></h1>
+        <p class="style1">Renting out your unused space could pay your bills or fund your next vacation</p>
+        <a href="#host" class="text-none">Learn more about hosting</a>
+      </div>
+      <div class="columnfood">
+        <h1><b>Trust and Safety</b></h1>
+        <p class="style1">From Verified ID to your worldwide customer support team, we've got your back</p>
+        <a href="#Trust" class="text-none">Learn more about trust and Airbnb</a>
+      </div>
+    </div>
+    </body>
 </html>
